# SPQR_at_work

./: calibrated_tf_publisher.launch  chrony.conf  package.xml
arm_planner/launch/: planner.launch
arm_planner/src/: planner_main.cpp  planning_request_node.cpp
grasping_check/: CMakeLists.txt
grasping_check/src/: grasping_check.cpp  grasping_check.h  main.cpp
navigation_stack/launch/: dis_basement_mapping.launch
navigation_stack/move_base_config/: amcl_node2.xml  base_local_planner_params.yaml  dis-A-basement-2011-12-16_original.yaml  dwa_local_planner_params.yaml  move_base.xml  move_base_sim.xml
navigation_stack/navigation_tutorials/navigation_stage/: single_robot.rviz
navigation_stack/navigation_tutorials/robot_setup_tf_tutorial/: CMakeLists.txt
obj_detector/: CMakeLists.txt
pnp_rockin/: CMakeLists.txt  package.xml
pnp_rockin/launch/: hri_pnpas.launch
pnp_rockin/plans/: detect_and_grasp.pnml  movement.pnml  only_nav.pnml  task1_norecovery.pnml
pnp_rockin/src/: Actions.cpp  RockinPNPAS.cpp  RockinPNPAS.h  topics.h
pnp_rockin_FBM_2/: CMakeLists.txt  package.xml
pnp_rockin_FBM_2/plans/: detect_only.pnml  task1.pnml
pnp_rockin_FBM_2/src/: Actions.cpp  Conditions.cpp  RockinPNPAS.cpp  RockinPNPAS.h  topics.h
pnp_rockin_task1/pnp_rockin/: README.md
rgbd_object_detection/: CMakeLists.txt  package.xml  run_detection.sh
rgbd_object_detection/action/: DetectObjects.action
rgbd_object_detection/config/: detection_table_and_clusters.ork
rgbd_object_detection/launch/: kinect.launch  rgbd_object_detection.launch
rgbd_object_detection/src/: cloud_accumulator.cpp  detection_client_example.cpp  detection_pipeline.cpp  main.cpp
src/: main.cpp
trajectory_points_generator/: CMakeLists.txt  package.xml
trajectory_points_generator/src/: generator.cpp
youbot_calibration/: CMakeLists.txt
youbot_calibration/calib/: arm_camera_intrinsic.yaml  arm_camera_intrinsic2.yaml  armcam_calib (copy).cfg  armcam_calib.cfg  armcam_calib_backup.cfg  kinect_calib.cfg  kinect_rockin_2015  ost.ini
youbot_calibration/launch/: calibrated_tf_publisher.launch  youbot_kinect_alvar.launch
youbot_calibration/src/: kinect_base_calib.cpp
youbot_joystick_control/launch/: youbot_joystick_control.launch
youbot_simulation/youbot_trajectory_action_server/: CMakeLists.txt
(+26 files in other folders)
