<?xml version="1.0"?>
<package>
  <name>pnp_rockin</name>
  <version>0.0.0</version>
  <description>pnp_rockin node.</description>
  
  <maintainer email="ciao@dis.it">IO</maintainer>

  <license>fsgrw</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>